1. 修复对于字符串数据得默认处理方式

--- a/TestCreateMySqlModel/TestCreateMySqlModel/appsettings.json
+++ b/TestCreateMySqlModel/TestCreateMySqlModel/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Setting": {
-    "SchemaOwnerName": "dst_local"
+    "SchemaOwnerName": "dst3.0_init_zqt"
   },
   "ConnectionStrings": {
-    "MySqlConnectionStr": "Server=192.168.101.65;Port=3306;Uid=root;Pwd=root;Database=dst_local;SslMode=None;"
+    "MySqlConnectionStr": "Server=192.168.1.24;Port=31101;Uid=root;Pwd=root;Database=dst3.0;SslMode=None;"
   }
 }
